--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -23,7 +23,7 @@
       #map { width:100%; height:400px; display:block; }
       .slide { width:100%; height:430px; display:block; }
       .mapboxgl-ctrl-attrib { display:none; }
-      #geocoder-container { width:100%; margin-top:10px; }
+      #geocoder-container { width:100%; margin-top:10px; display:none; }
       #geocoder-container > div { min-width:100%; margin-left:0; }
       .zoom { float:none !important; text-align:center; padding:15px; }
       .mapboxgl-canvas { position:relative !important; }
@@ -469,8 +469,8 @@ function genderChart(){
               padding: padding,
           data: {
               columns: [
-                  ['Population',0.29,0.30,0.08,0],
-                  ['Stops',0.23,0.13,0.19,0]
+                  ['Population',0.29,0.30,0.08,0.07],
+                  ['Stops',0.23,0.13,0.19,0.07]
               ],
               type: 'bar'
           },
