--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -54,7 +54,7 @@
       #toggle:hover { margin-top:5px !important; }
       .greyed { pointer-events:none; opacity:0.8; }
 
-      @media (max-width:525px) {
+      @media (max-width:500px) {
         #wrapper { width:100%; }
         #content { width:100%; }
         #viewSwitch { display:block; }
@@ -75,7 +75,7 @@
               <ul class="dropdown months" tabindex="1">
                <li class="menuSwitch" data="0"><a href='#'><div><div>Stops by area</div></div></a></li>
                <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
-               <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
+               <!-- <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li> -->
                <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
                <li class="menuSwitch" data="4"><a href='#'><div><div>Stopped and frisked</div></div></a></li>
                <li class="menuSwitch" data="5"><a href='#'><div><div>Gender disparities</div></div></a></li>
@@ -96,7 +96,7 @@
  <ul>
    <li class="menuSwitch selectThis" data="0"><a href='#'><div><div>Stops by area</div></div></a></li>
    <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
-   <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
+  <!--  <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li> -->
    <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
    <li class="menuSwitch" data="4"><a href='#'><div><div>Stopped and frisked</div></div></a></li>
    <li class="menuSwitch" data="5"><a href='#'><div><div>Gender disparities</div></div></a></li>
