--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -112,7 +112,7 @@
 <div class="breaker"></div>
 
 <div class="legends" id="scale">
-  <small class='stat'>Black drivers stopped</small>
+  <small class='stat'>% of stops with black driver</small>
     <div class="legendContainer">
       <span class='legend'>
         <nav class='legend clearfix'>
