--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -31,7 +31,7 @@
       #cssmenu { float:left; width:100%; }
       #content { float:right; width:100%; }
       #chatterBox { text-align:left; }
-      .chatter { height:100px; }
+      .chatter { height:30px; }
       .selectThis a { color:#000 !important; }
 
       .c3-line { stroke-width:5px !important; }
@@ -73,7 +73,7 @@
           <div id="dd" class="wrapper-dropdown-1" tabindex="1">
             <span>Stops by area</span>
               <ul class="dropdown months" tabindex="1">
-               <li class="menuSwitch" data="0"><a href='#'><div><div>Stops by area</div></div></a></li>
+               <li class="menuSwitch" data="0"><a href='#'><div><div>Stops by area of city</div></div></a></li>
                <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
                <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
                <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
@@ -89,7 +89,7 @@
 <div id='cssmenu'>
 <ul id="nav">
  <ul>
-   <li class="menuSwitch selectThis" data="0"><a href='#'><div><div>Stops by area</div></div></a></li>
+   <li class="menuSwitch selectThis" data="0"><a href='#'><div><div>Stops by area of city</div></div></a></li>
    <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
    <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
    <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
@@ -99,10 +99,13 @@
 </ul>
 </div>
 
+<div class="breaker"></div>
+
 <div id="chatterBox">
-<div class="chartTitle" id="title">Title here</div>
-<div class="chatter">chatter here</div>
+<div id="chatter" class="chatter"></div>
 </div>
+
+<div class="breaker"></div>
 
 <div id="content">
 <div id="mapbox" class="slide" data="0">
@@ -272,27 +275,33 @@ if (selected != null){
         if (index == 0){ 
           $(".slide").hide();
           $("#mapbox").show();
-          map.flyTo({ center:[-93.093611, 44.944167], zoom: 10 }); 
+          map.flyTo({ center:[-93.093611, 44.944167], zoom: 10 });
+          $("#chatter").html("Percentage of stopped drivers who were black in each police grid area.");
         }
         if (index == 1){ 
           $(".slide").hide();
           $("#population").show();
+          $("#chatter").html("Traffic stops between 2001 and 2016 by race of driver, compared to that racial group’s share of the city population.");
         }
         if (index == 2){ 
           $(".slide").hide();
           $("#time").show();
+          $("#chatter").html("Drivers are far more likely to be stopped by police at night.");
         }
         if (index == 3){ 
           $(".slide").hide();
           $("#trend").show();
+          $("#chatter").html("Whites were less likely than drivers of other races to get a citation during a traffic stop.");
         }
         if (index == 4){ 
           $(".slide").hide();
           $("#search").show();
+          $("#chatter").html("Black drivers were more likely than those of other races to be frisked or have their vehicles searched.");
         }
         if (index == 5){ 
           $(".slide").hide();
           $("#gender").show();
+          $("#chatter").html("The percentage of stops where the driver was a black male was significantly higher than their share of the city population.");
         }
       //  path = d3.selectAll(".chart path");
 
@@ -389,7 +398,7 @@ function timeChart(){
                   ["Native",0.12,0.14,0.19,0.39,0.28],
                   ["Hispanic",0.18,0.19,0.21,0.35,0.26]
               ],
-              type: 'line'
+              type: 'bar'
           },
           color:  {  pattern: ["#636363","#299E3D","#3580A3","#7F98AA","#C22A22"] },
           axis: {
@@ -404,7 +413,7 @@ function timeChart(){
               },
               x: {
                   type: 'category',
-                  categories: ['Morning', 'Aftn', 'Evening', 'Early Night', 'Overnite']
+                  categories: ['Morning', 'Aftnoon', 'Evening', 'Early Night', 'Overnite']
               }
             }
       });
