--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -102,7 +102,7 @@
 <div class="breaker"></div>
 
 <div id="chatterBox">
-<div id="chatter" class="chatter"></div>
+<div id="chatter" class="chatter">Percentage of stopped drivers who were black in each police grid area.</div>
 </div>
 
 <div class="breaker"></div>
