--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -75,7 +75,7 @@
               <ul class="dropdown months" tabindex="1">
                <li class="menuSwitch" data="0"><a href='#'><div><div>Stops by area of city</div></div></a></li>
                <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
-               <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
+               <li class="menuSwitch" data="2"><a href='#'><div><div>Time of day</div></div></a></li>
                <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
                <li class="menuSwitch" data="4"><a href='#'><div><div>Frisked and searched</div></div></a></li>
                <li class="menuSwitch" data="5"><a href='#'><div><div>Gender disparities</div></div></a></li>
@@ -91,7 +91,7 @@
  <ul>
    <li class="menuSwitch selectThis" data="0"><a href='#'><div><div>Stops by area of city</div></div></a></li>
    <li class="menuSwitch" data="1"><a href='#'><div><div>Racial disparities</div></div></a></li>
-   <li class="menuSwitch" data="2"><a href='#'><div><div>Nighttime stops</div></div></a></li>
+   <li class="menuSwitch" data="2"><a href='#'><div><div>Time of day</div></div></a></li>
    <li class="menuSwitch" data="3"><a href='#'><div><div>The citation gap</div></div></a></li>
    <li class="menuSwitch" data="4"><a href='#'><div><div>Frisked and searched</div></div></a></li>
    <li class="menuSwitch" data="5"><a href='#'><div><div>Gender disparities</div></div></a></li>
