--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -286,7 +286,7 @@ if (selected != null){
         if (index == 2){ 
           $(".slide").hide();
           $("#time").show();
-          $("#chatter").html("Drivers are far more likely to be stopped by police at night.");
+          $("#chatter").html("While white drivers are more likely to be stopped by police at during the day, minorities are more likely pulled over at night.");
         }
         if (index == 3){ 
           $(".slide").hide();
