--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -489,7 +489,7 @@ function searchChart(){
               ],
               type: 'bar'
           },
-          color:  {  pattern: ["#636363","#7F98AA","#556E7F"] },
+          color:  {  pattern: ["#7F98AA","#556E7F"] },
           axis: {
             y: {
                   max: 1,
