--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -28,7 +28,7 @@
       .zoom { float:none !important; text-align:center; padding:15px; }
       .mapboxgl-canvas { position:relative !important; }
 
-      #cssmenu { float:left; width:100%; }
+      #cssmenu { float:left; width:100%; display:block !important; }
       #content { float:right; width:100%; }
       #chatterBox { text-align:left; }
       .chatter { height:30px; }
