--- a/20161214-traffic_stops/index.html
+++ b/20161214-traffic_stops/index.html
@@ -68,7 +68,7 @@
 
 <div id="wrapper">
 
-<div id="viewSwitch">
+<!-- <div id="viewSwitch">
 <div id="selector">
   <section class="main">
         <div class="wrapper-demo">
@@ -86,7 +86,7 @@
         ​</div>
 </section>
 </div>
-</div>
+</div> -->
 
 <div id='cssmenu'>
 <ul id="nav">
