--- a/index_browse.html
+++ b/index_browse.html
@@ -250,6 +250,7 @@
      #sidebar { width:100%; text-align:center; float:none; }
      #content { width:100%; text-align:left; float:none; }
      #resumebox { height:750px !important; }
+     #profile { display:none; }
      }
 
      @media (max-width:450px) {
